--- a/public/locales/seo-be.json
+++ b/public/locales/seo-be.json
@@ -82,6 +82,15 @@
       "twitter_title": "Атрымаць дапамогу | Bulwark Fund | Get Help",
       "twitter_description": "Бяспечная сувязь і падтрымка нашых ваяроў. | Secure communication and support for our fighters."
     },
+    "donate_page": {
+      "title": "Падтрымка беларускіх добраахвотнікаў | Дапамагчы Bulwark | Support Belarusian Volunteers",
+      "description": "Падтрымайце беларускіх добраахвотнікаў ва Украіне. Фінансавы ўнёсак, юрыдычная і псіхалагічная дапамога. | Support Belarusian volunteers in Ukraine. Financial contributions, legal and psychological aid.",
+      "og_title": "Падтрымаць Bulwark Fund | Support Belarusian Fighters",
+      "og_description": "Твая падтрымка — наша моц. Далучайся да дапамогі беларускім воінам. | Your support is our strength. Join the support for Belarusian fighters.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Donate to Bulwark Fund | BY / EN",
+      "twitter_description": "Зрабі свой унёсак у бяспеку беларускіх добраахвотнікаў. | Contribute to the security of Belarusian volunteers."
+    },
     "donate": {
       "title": "Падтрымка беларускіх добраахвотнікаў | Дапамагчы Bulwark | Support Belarusian Volunteers",
       "description": "Падтрымайце беларускіх добраахвотнікаў ва Украіне. Фінансавы ўнёсак, юрыдычная і псіхалагічная дапамога. | Support Belarusian volunteers in Ukraine. Financial contributions, legal and psychological aid.",
