--- a/public/locales/seo-en.json
+++ b/public/locales/seo-en.json
@@ -82,6 +82,15 @@
       "twitter_title": "Get Help | Bulwark Fund",
       "twitter_description": "Secure communication and support for our fighters."
     },
+    "donate_page": {
+      "title": "Support Belarusian Volunteers | Help Bulwark Fund",
+      "description": "Support Belarusian volunteers in Ukraine. Financial contributions, legal and psychological aid.",
+      "og_title": "Support Bulwark Fund | Help Belarusian Fighters",
+      "og_description": "Your support is our strength. Join the mission to help Belarusian warriors.",
+      "og_site_name": "Bulwark Fund",
+      "twitter_title": "Donate to Bulwark Fund | EN",
+      "twitter_description": "Make your contribution to the security of Belarusian volunteers."
+    },
     "donate": {
       "title": "Support Belarusian Volunteers | Help Bulwark Fund",
       "description": "Support Belarusian volunteers in Ukraine. Financial contributions, legal and psychological aid.",
