--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -111,7 +111,7 @@
     "type1_title": "Донарам",
     "type1_text": "Фінансавая падтрымка для аплаты працы юрыстаў, псіхолагаў і арэнды памяшканняў.",
     "type2_title": "Экспертам",
-    "type2_text": "Калі вы юрыст ці псіхолаг і гатовы кансультаваць pro bono — далучайцеся.",
+    "type2_text": "Калі вы юрыст, ці псіхолаг і гатовы кансультаваць pro bono — далучайцеся.",
     "type3_title": "Бізнесу",
     "type3_text": "Зніжкі на паслугі, праграмы рэабілітацыі ці лакацыі для сустрэч.",
     "cta": "Маеце прапанову? Напішыце нам",
@@ -251,39 +251,7 @@
     "contact_placeholder": "Telegram/Signal(@user) або Phone(+38..)",
     "btn_send": "Адправіць запыт"
   },
-  "support": {
-    "page_title": "Дапамагчы | Bulwark",
-    "tag": "Дапамога і Партнёрства",
-    "main_title": "Твая падтрымка — наша моц",
-    "hero_text": "Кожны рэсурс, які вы інвестуеце ў «Булварк», працуе на захаванне чалавечага капіталу Беларусі.",
-    "hero_subtext": "Ваша дапамога можа быць фінансавай, экспертнай або медыйнай — любы ўнёсак набліжае нас да агульнай мэты: бяспекі тых, хто нас абараняе.",
-    "usage_title": "На што ідуць сродкі",
-    "item1_title": "Прававы шчыт",
-    "item1_text": "Легалізацыя ў Украіне і юрыдычны кансалтынг для воінаў.",
-    "item2_title": "Псіхалогія",
-    "item2_text": "Дапамога пры ПТСР і адаптацыя воінаў да цывільнага жыцця.",
-    "item3_title": "Будучыня",
-    "item3_text": "Кадравы рэзерв і падтрымка сем'яў праваахвотнікаў.",
-    "finance_title": "Фінансавы ўнёсак",
-    "donate_direct_title": "Дапамагчы байцам/фонду",
-    "donate_direct_text": "Наўпроставая фінансавая падтрымка нашых абаронцаў праз хуткія плацяжы",
-    "requisites_title": "Варыянты аплаты",
-    "requisites_text": "Картай онлайн / Перавод на рахунак / Крыптавалюты",
-    "partner_title": "Стаць партнёрам",
-    "type2_title": "Экспертная дапамога",
-    "type2_text": "Юрыдычныя паслугі, медыцына або IT pro bono.",
-    "type3_title": "Бізнес-супраца",
-    "type3_text": "Карпаратыўныя ўнёскі або рэсурсная падтрымка.",
-    "volunteer_title": "Валанцёрства",
-    "volunteer_text": "Дапамога з перакладамі, камунікацыяй ці арганізацыяй.",
-    "cta_title": "Маеце прапанову?",
-    "cta_subtext": "Мы заўсёды адкрытыя да новых ідэй. Напішыце нам або скарыстайцеся ботам.",
-    "cta_form_label": "Адправіць запыт праз форму",
-    "btn_submit": "Стаць партнёрам",
-    "btn_donate": "Падтрымаць",
-    "btn_requisites": "Глядзець рэквізіты"
-  },
-
+ 
   "materials": {
     "label": "Матэрыялы",
     "title": "База ведаў",
